# VV

./: .gitignore  .gitmodules  CMakeLists.txt  compile_shaders.bat  deletion_queue.h  main.cpp  renderer.cpp  renderer.h  renderer_core.h  types.h  vk_renderer_core.cpp
common/: function_queue.h  io.cpp  io.h  types.h
engine/data/: magicavoxel_parser.cpp  magicavoxel_parser.h  voxel_model.cpp  voxel_model.h
engine/data/acceleration_structures/: voxel_brick.cpp  voxel_brick.h
engine/data/structures/: voxel_brick.cpp  voxel_brick.h  voxel_raw.cpp  voxel_raw.h
engine/renderer/: cameras.h  compute_pipeline.cpp  compute_pipeline.h  device_resources.h  profiling.cpp  profiling.h  renderer.cpp  renderer_core.h  vk_device_resources.cpp  vk_renderer_core.cpp
game/: game.cpp  game.h
lib/: CMakeLists.txt  DearImGUI.cmake
renderer/: cameras.cpp  cameras.h  compute_pipeline.cpp  compute_pipeline.h  renderer.cpp  renderer.h  renderer_core.h  vk_renderer_core.cpp  vv_vulkan.h
shaders/: CMakeLists.txt
shaders/compute/: common.glsl  rt_intersect.comp  rt_raygen.comp  rt_shade.comp
